src/test/resources/testData/foo/language/annotators/functions/IncorrectFuncNameWithArgs_expected.Camel
${<error descr="Function does not exist">bodeeAs("foo", "bar", "baz", )</error>}